# copinance-os

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFESTO.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
.pre-commit-hooks/: check-changelog.py  pre-push-checks.py
docs/: README.md  index.md  next.config.js  next.config.mjs  package-lock.json  package.json  theme.config.tsx
docs/api-reference/: data-providers.md
docs/developer-guide/: architecture.md  extending.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/pages/: _meta.json  _meta.tsx  index.mdx
docs/pages/analysis-reference/: _meta.tsx  index.mdx  macro-regime.mdx  market-data-tools.mdx  options-and-greeks.mdx  sec-filings.mdx
docs/pages/analytics/: _meta.tsx  bsm-and-greeks.mdx  index.mdx  options-chain-metadata.mdx
docs/pages/api-reference/: _meta.json  _meta.tsx  data-providers.mdx  index.mdx
docs/pages/developer-guide/: _meta.json  _meta.tsx  agent-progress-client-integration.mdx  api-reference.mdx  architecture.mdx  extending.mdx  financial-literacy.mdx  testing.mdx
docs/pages/examples/: _meta.tsx  equity-deep-dive.mdx  index.mdx  macro-dashboard.mdx  options-session.mdx
docs/pages/getting-started/: _meta.json  _meta.tsx  configuration.mdx  installation.mdx  library.mdx  quickstart.mdx
docs/pages/tools/: _meta.tsx  index.mdx
docs/pages/tools/analysis/: _meta.tsx  index.mdx  macro-indicators.mdx  market-regime.mdx
docs/pages/tools/data-providers/: _meta.tsx  index.mdx
docs/pages/user-guide/: _meta.json  _meta.tsx  analysis-modes.mdx  cli.mdx  configuration.mdx  workflows.mdx
docs/user-guide/: cli.md  configuration.md  workflows.md
src/copinance_os/: __init__.py
src/copinance_os/ai/: __init__.py
src/copinance_os/ai/agents/: __init__.py
src/copinance_os/ai/llm/: __init__.py  analyzer_factory.py  config.py  config_loader.py  llm_analyzer.py  policy.py  streaming.py  tool_loop_streaming.py
src/copinance_os/ai/reasoning/: __init__.py
src/copinance_os/ai/summarization/: __init__.py
src/copinance_os/core/: __init__.py
src/copinance_os/core/events/: __init__.py
src/copinance_os/core/execution_engine/: __init__.py  base.py  factory.py  instrument_analysis.py  llm_stream_stdout.py  market_analysis.py  question_driven_analysis.py  question_driven_tool_summary.py
src/copinance_os/core/orchestrator/: __init__.py  research_orchestrator.py  run_job.py  runners.py
src/copinance_os/core/pipeline/: __init__.py
src/copinance_os/core/progress/: __init__.py  emit.py  recording_sink.py  redaction.py
src/copinance_os/data/: __init__.py
src/copinance_os/data/cache/: __init__.py  cache_manager.py  local_file_cache.py
src/copinance_os/data/literacy/: __init__.py  instrument_analysis.py  macro_indicators.py  market_regime.py  options_positioning.py
src/copinance_os/data/loaders/: __init__.py
src/copinance_os/data/providers/: __init__.py  fred.py  yfinance.py
src/copinance_os/data/repositories/: __init__.py
src/copinance_os/data/schemas/: __init__.py  market_data_conversions.py  price_series.py
src/copinance_os/domain/: __init__.py  exceptions.py  literacy.py
src/copinance_os/domain/backtest/: __init__.py  models.py  simple_long_only.py
src/copinance_os/domain/indicators/: __init__.py  oscillators.py  result.py  returns.py  trend.py  volatility.py
src/copinance_os/domain/models/: __init__.py  agent_progress.py  analysis.py  analysis_report.py  fundamentals.py  job.py  llm_conversation.py  macro.py  market.py  market_requests.py  options_positioning.py  profile.py  stock.py  tool_bundle_context.py
src/copinance_os/domain/plugins/: __init__.py  registry.py  spec.py
src/copinance_os/domain/portfolio/: __init__.py
src/copinance_os/domain/ports/: __init__.py  analysis_execution.py  analytics.py  analyzers.py  data_providers.py  progress.py  repositories.py  storage.py  tool_bundles.py  tools.py  use_cases.py
src/copinance_os/domain/risk/: __init__.py
src/copinance_os/domain/services/: __init__.py  instrument_analysis_report.py  macro_series_metrics.py  market_analysis_report.py  profile_management.py  question_driven_analysis_report.py  run_job_analysis_report.py
src/copinance_os/domain/strategies/: __init__.py  protocols.py  signal.py
src/copinance_os/domain/validation/: __init__.py
src/copinance_os/infra/: __init__.py  error_handler.py  logging.py
src/copinance_os/infra/config/: __init__.py  settings.py
src/copinance_os/infra/di/: __init__.py  container.py  data_providers.py  profile_use_cases.py  repositories.py  services.py  storage.py  use_cases.py
src/copinance_os/infra/factories/: __init__.py  analysis_executor.py  llm_analyzer.py
src/copinance_os/infra/plugins/: __init__.py  bootstrap.py  load_specs.py
src/copinance_os/interfaces/: __init__.py
src/copinance_os/interfaces/api/: __init__.py  app.py
src/copinance_os/interfaces/cli/: __init__.py  __main__.py  analyze.py  cache.py  main.py  market.py  market_helpers.py  profile.py  profile_context.py  root.py  utils.py
src/copinance_os/research/: __init__.py
src/copinanceos/: __init__.py
src/copinanceos/application/: __init__.py  exceptions.py  run_job.py  runners.py
src/copinanceos/cli/: __init__.py  __main__.py  analyze.py  ask.py  cache.py  error_handler.py  formatting.py  market.py  profile.py  profile_context.py  research.py  stock.py  utils.py
src/copinanceos/domain/: __init__.py  exceptions.py
src/copinanceos/infrastructure/: __init__.py  config.py  error_handler.py  logging.py  persistence.py
tests/: conftest.py
tests/e2e/: test_analyze_positioning_cli.py
tests/fixtures/options_integration/: spy_chain_snapshot.json
tests/fixtures/options_positioning/: toy_near.json  toy_near_missing_greeks.json
tests/integration/copinance_os/: __init__.py
tests/integration/copinanceos/: __init__.py
tests/unit/copinance_os/: __init__.py
tests/unit/copinanceos/: __init__.py
(+383 files in other folders)
